Fix touch event bug on mobile

--- a/client/src/components/color-selector/ColorInput.styl
+++ b/client/src/components/color-selector/ColorInput.styl
@@ -18,6 +18,7 @@
     overflow hidden
     outline 0.1rem solid grey(08)
     z-index 0
+    touch-action none
     
     transition width 0.2s ease-in-out, height 0.2s ease-in-out, outline-color 0.2s ease-in-out
 
